--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,6 @@
   "bugs": {
     "url": "https://github.com/alvo254/phase-2-project-api/issues"
   },
-  "homepage": "https://github.com/alvo254/phase-2-project-api#readme",
   "dependencies": {
     "json-server": "^0.17.0"
   }
