--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://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@github.com/alvo254/phase-2-project-api.git"
   },
   "author": "Alvin Ndung'u",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/alvo254/phase-2-project-api/issues"
   },
